--- a/baseApp/src/main/res/layout/activity_main.xml
+++ b/baseApp/src/main/res/layout/activity_main.xml
@@ -9,28 +9,64 @@
             type="com.motor.connect.feature.main.UserViewModel" />
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_main">
+        android:background="@drawable/bg_main"
+        android:orientation="vertical">
 
-        <include
-            android:id="@+id/header_container"
-            layout="@layout/header_item_view" />
-
-        <FrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/header_container"
-            android:layout_marginTop="5dp">
+            android:layout_height="@dimen/actionbar_height"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/txt_title"
+                style="@style/TextView.Screen.Title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="Motor Control"
+                android:textColor="@color/color_text_white"
+                android:textSize="@dimen/connect_text_size_22" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_text_white" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.5"
+            android:gravity="center">
+
+            <TextView
+                style="@style/TextView.Screen.Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|left"
+                android:text="Weather Info"
+                android:textColor="@color/color_text_white"
+                android:textSize="@dimen/connect_text_size_22" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt_empty"
                 style="@style/TextView.Screen.Title"
-                android:layout_width="180dp"
-                android:layout_height="180dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/actionbar_height"
                 android:background="@drawable/cirle_background"
                 android:gravity="center"
                 android:onClick="openEmptyScreen"
@@ -46,77 +82,91 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:orientation="horizontal"
-                android:paddingBottom="@dimen/actionbar_height"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
+        </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/bottom_container"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rc_area"
                 android:layout_width="match_parent"
-                android:layout_height="46dp"
-                android:layout_below="@+id/recyclerView"
-                android:layout_gravity="bottom"
-                android:background="@color/color_text_white"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/bottom_container"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/actionbar_height"
+            android:layout_below="@+id/recyclerView"
+            android:layout_gravity="bottom"
+            android:background="@color/color_text_white"
+            android:gravity="center|center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/btn_home"
+                style="@style/TextView.Screen.Menu"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical|center"
+                android:layout_weight="1"
+                android:background="@drawable/item_view_style"
                 android:gravity="center|center_vertical"
-                android:orientation="horizontal">
+                android:onClick="openMainScreen"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="Màn Hình Chính"
+                android:textSize="@dimen/connect_text_size_menu"
+                android:visibility="gone" />
 
-                <TextView
-                    android:id="@+id/btn_home"
-                    style="@style/TextView.Screen.Menu"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical|center"
-                    android:layout_weight="1"
-                    android:background="@drawable/item_view_style"
-                    android:gravity="center|center_vertical"
-                    android:onClick="openMainScreen"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="Màn Hình Chính"
-                    android:textSize="@dimen/connect_text_size_menu"
-                    android:visibility="gone" />
+            <TextView
+                android:id="@+id/btn_add"
+                style="@style/TextView.Screen.Menu"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/item_view_style"
+                android:gravity="center"
+                android:onClick="openAddAreaScreen"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="Thêm Khu Vực"
+                android:textSize="@dimen/connect_text_size_menu" />
 
-                <TextView
-                    android:id="@+id/btn_add"
-                    style="@style/TextView.Screen.Menu"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/item_view_style"
-                    android:gravity="center"
-                    android:onClick="openAddAreaScreen"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="5dp"
-                    android:text="Thêm Khu Vực"
-                    android:textSize="@dimen/connect_text_size_menu" />
+            <TextView
+                android:id="@+id/btn_notify"
+                style="@style/TextView.Screen.Menu"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/item_view_style"
+                android:gravity="center"
+                android:onClick="openNotificationScreen"
+                android:text="Thông Báo"
+                android:textSize="@dimen/connect_text_size_menu" />
 
-                <TextView
-                    android:id="@+id/btn_notify"
-                    style="@style/TextView.Screen.Menu"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/item_view_style"
-                    android:gravity="center"
-                    android:onClick="openNotificationScreen"
-                    android:text="Thông Báo"
-                    android:textSize="@dimen/connect_text_size_menu" />
+            <TextView
+                android:id="@+id/btn_setting"
+                style="@style/TextView.Screen.Menu"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:background="@drawable/item_view_style"
+                android:gravity="center"
+                android:onClick="openSettingScreen"
+                android:text="Cài Đặt"
+                android:textSize="@dimen/connect_text_size_menu" />
 
-                <TextView
-                    android:id="@+id/btn_setting"
-                    style="@style/TextView.Screen.Menu"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/item_view_style"
-                    android:gravity="center"
-                    android:onClick="openSettingScreen"
-                    android:text="Cài Đặt"
-                    android:textSize="@dimen/connect_text_size_menu" />
+        </LinearLayout>
 
-            </LinearLayout>
-        </FrameLayout>
-
-    </RelativeLayout>
+    </LinearLayout>
 
 </layout>
