--- a/baseApp/src/main/res/layout/item_vans_used.xml
+++ b/baseApp/src/main/res/layout/item_vans_used.xml
@@ -24,7 +24,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/area"
+                android:id="@+id/area_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_corner"
@@ -34,7 +34,7 @@
                 android:textSize="36sp" />
 
             <TextView
-                android:id="@+id/van_id"
+                android:id="@+id/area_name"
                 style="@style/TextView.Screen.Description"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -60,6 +60,7 @@
                 android:src="@mipmap/ic_clock" />
 
             <TextView
+                android:id="@+id/timeDuration"
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -81,8 +82,8 @@
                 android:textSize="24sp" />
 
             <ImageView
-                android:layout_width="54dp"
-                android:layout_height="54dp"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
                 android:layout_marginLeft="20dp"
                 android:src="@mipmap/ic_play" />
         </LinearLayout>
@@ -110,6 +111,7 @@
                     android:textSize="18sp" />
 
                 <CheckBox
+                    android:id="@+id/t2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -132,6 +134,7 @@
                     android:textSize="18sp" />
 
                 <CheckBox
+                    android:id="@+id/t3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -154,6 +157,7 @@
                     android:textSize="18sp" />
 
                 <CheckBox
+                    android:id="@+id/t4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -176,6 +180,7 @@
                     android:textSize="18sp" />
 
                 <CheckBox
+                    android:id="@+id/t5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -198,6 +203,7 @@
                     android:textSize="18sp" />
 
                 <CheckBox
+                    android:id="@+id/t6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -220,6 +226,7 @@
                     android:textSize="18sp" />
 
                 <CheckBox
+                    android:id="@+id/t7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -238,11 +245,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="CN"
-
                     android:textColor="@color/color_text_white"
                     android:textSize="18sp" />
 
                 <CheckBox
+                    android:id="@+id/cn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -263,45 +270,53 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/schedule1"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="4dp"
             android:background="@drawable/bg_duration"
             android:gravity="center"
+            android:onClick="actionDuration1"
             android:text="06:00"
             android:textColor="@color/color_text_white"
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/schedule2"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="4dp"
             android:background="@drawable/bg_duration"
             android:gravity="center"
+            android:onClick="actionDuration2"
             android:text="10:00"
             android:textColor="@color/color_text_white"
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/schedule3"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="4dp"
             android:background="@drawable/bg_duration"
             android:gravity="center"
+            android:onClick="actionDuration3"
             android:text="14:00"
             android:textColor="@color/color_text_white"
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/schedule4"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="4dp"
             android:background="@drawable/bg_duration"
             android:gravity="center"
+            android:onClick="actionDuration4"
             android:text="17:00"
             android:textColor="@color/color_text_white"
             android:textSize="20sp" />
@@ -313,23 +328,27 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/btnRemove"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="@dimen/connect_margin_10"
+                android:layout_marginRight="@dimen/connect_margin_10"
                 android:layout_weight="1"
                 android:background="@drawable/bg_plus_minus"
+                android:onClick="actionRemove"
                 android:src="@mipmap/ic_minus" />
 
             <ImageView
+                android:id="@+id/btnAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginLeft="@dimen/connect_margin_10"
+                android:layout_marginRight="@dimen/connect_margin_10"
                 android:layout_weight="1"
                 android:background="@drawable/bg_plus_minus"
+                android:onClick="actionAdd"
                 android:src="@mipmap/ic_plus" />
 
         </LinearLayout>
