--- a/baseApp/src/main/res/values/arrays.xml
+++ b/baseApp/src/main/res/values/arrays.xml
@@ -45,5 +45,8 @@
         <item>40 phút</item>
         <item>50 phút</item>
         <item>60 phút</item>
+        <item>70 phút</item>
+        <item>80 phút</item>
+        <item>90 phút</item>
     </string-array>
 </resources>
