--- a/baseApp/src/main/res/layout/activity_main.xml
+++ b/baseApp/src/main/res/layout/activity_main.xml
@@ -64,15 +64,16 @@
             <TextView
                 android:id="@+id/txt_empty"
                 style="@style/TextView.Screen.Title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
                 android:layout_gravity="center"
                 android:background="@drawable/cirle_background"
                 android:gravity="center"
                 android:onClick="openEmptyScreen"
                 android:text="@string/home_area_empty"
                 android:textColor="@color/color_white"
-                android:textSize="@dimen/connect_text_size_36"
+
+                android:textSize="@dimen/connect_text_size_30"
                 android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
@@ -82,6 +83,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:orientation="horizontal"
+                android:visibility="visible"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
         </LinearLayout>
@@ -111,21 +113,6 @@
             android:gravity="center|center_vertical"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/btn_home"
-                style="@style/TextView.Screen.Menu"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical|center"
-                android:layout_weight="1"
-                android:background="@drawable/item_view_style"
-                android:gravity="center|center_vertical"
-                android:onClick="openMainScreen"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:text="Màn Hình Chính"
-                android:textSize="@dimen/connect_text_size_menu"
-                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/btn_add"
@@ -158,7 +145,7 @@
                 style="@style/TextView.Screen.Menu"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5"
+                android:layout_weight="1"
                 android:background="@drawable/item_view_style"
                 android:gravity="center"
                 android:onClick="openSettingScreen"
