--- a/baseApp/src/main/res/layout/progressing_view.xml
+++ b/baseApp/src/main/res/layout/progressing_view.xml
@@ -2,16 +2,18 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/circular_container"
-    android:layout_width="120dp"
-    android:layout_height="120dp"
-    android:layout_gravity="right"
-    android:layout_marginRight="30dp"
+    android:layout_width="80dp"
+    android:layout_height="80dp"
+    android:layout_gravity="center"
     android:background="@color/transparent">
 
     <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
         android:id="@+id/working_progress"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="right"
-        app:direction="clockwise" />
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        app:direction="clockwise"
+        app:progressColor="@color/color_blue_dark"
+        app:textColor="@color/color_blue_dark" />
+
 </FrameLayout>
