--- a/baseApp/src/main/res/layout/edit_area_view.xml
+++ b/baseApp/src/main/res/layout/edit_area_view.xml
@@ -113,18 +113,29 @@
                     <TextView
                         style="@style/TextView.Screen.Description1"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_weight="2"
                         android:gravity="center|left"
                         android:text="@string/add_area_van_use"
                         android:textSize="@dimen/connect_text_size_title" />
 
+                    <ImageView
+                        android:id="@+id/btn_remove"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/connect_margin_10"
+                        android:layout_marginRight="@dimen/connect_margin_10"
+                        android:layout_weight="0.5"
+                        android:background="@drawable/bg_plus_minus"
+                        android:onClick="actionRemove"
+                        android:src="@mipmap/ic_minus" />
+
                     <TextView
                         android:id="@+id/txt_van"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/border_rect_bg"
                         android:gravity="center"
@@ -132,6 +143,18 @@
                         android:onClick="onSelectVanUsed"
                         android:text="2 Van"
                         android:textSize="@dimen/connect_text_size_title" />
+
+                    <ImageView
+                        android:id="@+id/btn_add"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/connect_margin_10"
+                        android:layout_marginRight="@dimen/connect_margin_10"
+                        android:layout_weight="0.5"
+                        android:background="@drawable/bg_plus_minus"
+                        android:onClick="actionAdd"
+                        android:src="@mipmap/ic_plus" />
 
                 </LinearLayout>
 
