--- a/baseApp/src/main/res/values/styles.xml
+++ b/baseApp/src/main/res/values/styles.xml
@@ -90,7 +90,7 @@
     </style>
 
     <style name="SwitchCompatTheme">
-        <item name="colorControlActivated">@color/color_blue</item>
+        <item name="colorControlActivated">@color/color_yellow</item>
     </style>
 
 </resources>
