--- a/baseApp/src/main/res/layout/activity_main.xml
+++ b/baseApp/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.motor.connect.feature.main.UserViewModel" />
+            type="com.motor.connect.feature.main.MainViewModel" />
     </data>
 
     <LinearLayout
@@ -125,7 +125,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:orientation="vertical">
 
             <TextView
@@ -148,24 +148,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:orientation="horizontal"
                 android:visibility="visible"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rc_area"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp" />
 
         </LinearLayout>
 
