--- a/baseApp/src/main/res/layout/detail_view.xml
+++ b/baseApp/src/main/res/layout/detail_view.xml
@@ -114,71 +114,12 @@
                 </android.support.v7.widget.CardView>
 
                 <android.support.v7.widget.CardView
-                    android:id="@+id/working_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/card_margin"
-                    android:minHeight="160dp"
-                    android:visibility="gone">
-
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center|right">
-
-                        <include
-
-                            layout="@layout/progressing_view" />
-                    </FrameLayout>
-
-                    <LinearLayout
-                        style="@style/Widget.CardContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_card_view"
-                        android:orientation="vertical"
-                        android:visibility="visible">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="@string/detail_motor_running"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                            android:textColor="@color/color_text_white" />
-
-                        <TextView
-                            android:id="@+id/txt_time_start"
-                            style="@style/TextView.Screen.Detail"
-                            android:textColor="@color/color_text_white"
-                            android:textSize="@dimen/connect_text_size_description"
-                            tool:text="Thoi gian bat dau" />
-
-                        <TextView
-                            android:id="@+id/txt_time_working"
-                            style="@style/TextView.Screen.Detail"
-                            android:textColor="@color/color_text_white"
-                            android:textSize="@dimen/connect_text_size_description"
-                            tool:text="Thoi gian tuoi" />
-
-                        <TextView
-                            android:id="@+id/txt_van"
-                            style="@style/TextView.Screen.Detail"
-                            android:textColor="@color/color_text_white"
-                            android:textSize="@dimen/connect_text_size_description"
-                            tool:text="So van mo" />
-                    </LinearLayout>
-
-
-                </android.support.v7.widget.CardView>
-
-                <android.support.v7.widget.CardView
                     android:id="@+id/info_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/card_margin"
                     android:layout_marginRight="@dimen/card_margin"
-                    android:layout_marginBottom="@dimen/card_margin"
-                    android:visibility="visible">
+                    android:layout_marginBottom="@dimen/card_margin">
 
                     <LinearLayout
                         style="@style/Widget.CardContent"
