--- a/baseApp/src/main/res/layout/item_view_area.xml
+++ b/baseApp/src/main/res/layout/item_view_area.xml
@@ -72,6 +72,7 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
             <TextView
+                android:id="@+id/txt_schedule"
                 style="@style/TextView.Screen.Description"
                 android:layout_marginLeft="@dimen/connect_margin_5"
                 android:text="09:30 Tomorrow"
