--- a/baseApp/src/main/res/values/dimens.xml
+++ b/baseApp/src/main/res/values/dimens.xml
@@ -29,6 +29,7 @@
 
     <dimen name="actionbar_height">46dp</dimen>
     <dimen name="button_min_height">56dp</dimen>
+    <dimen name="button_height">40dp</dimen>
 
     <dimen name="connect_text_size_30">30sp</dimen>
     <dimen name="connect_text_size_title">20sp</dimen>
