--- a/baseApp/src/main/res/layout/dialog_bottom_sheet_view.xml
+++ b/baseApp/src/main/res/layout/dialog_bottom_sheet_view.xml
@@ -27,10 +27,9 @@
         style="@style/TextView.Screen.Title"
         android:gravity="left|center"
         android:minHeight="@dimen/actionbar_height"
-        android:onClick="setupScheduleArea"
+        android:onClick="controlAgenda"
         android:paddingLeft="@dimen/connect_margin_16"
-
-        android:text="@string/setting_schedule"
+        android:text="@string/setting_control"
         android:textColor="@color/color_text_white" />
 
     <View
@@ -42,9 +41,24 @@
         style="@style/TextView.Screen.Title"
         android:gravity="left|center"
         android:minHeight="@dimen/actionbar_height"
-        android:onClick="controlAgenda"
+        android:onClick="setupAgenda"
         android:paddingLeft="@dimen/connect_margin_16"
-        android:text="@string/setting_control"
+        android:text="@string/setting_agenda"
+        android:textColor="@color/color_text_white" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_grey" />
+
+    <TextView
+        style="@style/TextView.Screen.Title"
+        android:gravity="left|center"
+        android:minHeight="@dimen/actionbar_height"
+        android:onClick="setupScheduleArea"
+        android:paddingLeft="@dimen/connect_margin_16"
+
+        android:text="@string/setting_schedule"
         android:textColor="@color/color_text_white" />
 
     <View
